--- a/gatsby-theme-replica/package.json
+++ b/gatsby-theme-replica/package.json
@@ -5,53 +5,53 @@
   "author": "HiiTea (hi@hiitea.io)",
   "license": "MIT",
   "peerDependencies": {
-    "@types/node": "^12.7.5",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "gatsby": "^2.13.41",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "@types/node": "^20.1.0",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "gatsby": "^5.9.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.11.1",
-    "gatsby-plugin-disqus": "^1.2.2",
-    "gatsby-plugin-feed": "^2.5.13",
-    "gatsby-plugin-mdx": "^1.2.42",
-    "gatsby-plugin-nprogress": "^2.3.12",
-    "gatsby-plugin-postcss": "^2.3.13",
-    "gatsby-plugin-react-helmet": "^3.3.12",
-    "gatsby-plugin-sitemap": "^2.4.17",
-    "gatsby-plugin-styled-components": "^3.3.12",
-    "gatsby-plugin-typescript": "^2.4.21",
-    "gatsby-source-filesystem": "^2.3.31",
-    "gatsby-transformer-yaml": "^2.4.13",
-    "github-slugger": "^1.3.0",
-    "postcss-import": "^12.0.1",
-    "prism-react-renderer": "^1.1.1",
+    "babel-plugin-styled-components": "^2.1.1",
+    "gatsby-plugin-disqus": "^1.2.6",
+    "gatsby-plugin-feed": "^5.9.0",
+    "gatsby-plugin-mdx": "^5.9.0",
+    "gatsby-plugin-nprogress": "^5.9.0",
+    "gatsby-plugin-postcss": "^6.9.0",
+    "gatsby-plugin-react-helmet": "^6.9.0",
+    "gatsby-plugin-sitemap": "^6.9.0",
+    "gatsby-plugin-styled-components": "^6.9.0",
+    "gatsby-plugin-typescript": "^5.9.0",
+    "gatsby-source-filesystem": "^5.9.0",
+    "gatsby-transformer-yaml": "^5.9.0",
+    "github-slugger": "1.5.0",
+    "postcss-import": "^15.1.0",
+    "prism-react-renderer": "^2.0.3",
     "react-helmet": "^6.1.0",
-    "react-icons": "^3.11.0",
-    "styled-components": "^5.2.0",
-    "tailwindcss": "^1.8.10",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "react-icons": "^4.8.0",
+    "styled-components": "^5.3.10",
+    "tailwindcss": "^3.3.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   },
   "scripts": {
     "develop": "gatsby develop",
     "test": "jest --testPathPattern='test\\.[tj]sx?$'"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-typescript": "^7.10.4",
-    "@types/jest": "^26.0.14",
-    "@types/node": "^14.11.8",
-    "@types/react": "^16.9.51",
-    "@types/react-dom": "^16.9.5",
-    "@types/react-helmet": "^6.1.0",
-    "@types/styled-components": "^5.1.4",
-    "babel-jest": "^26.5.2",
-    "gatsby": "^2.24.63",
-    "jest": "^26.5.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-typescript": "^7.21.5",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^20.1.0",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "@types/react-helmet": "^6.1.6",
+    "@types/styled-components": "^5.1.26",
+    "babel-jest": "^29.5.0",
+    "gatsby": "^5.9.0",
+    "jest": "^29.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
