--- a/gatsby-theme-replica/package.json
+++ b/gatsby-theme-replica/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
+    "@mdx-js/react": "^2.3.0",
     "babel-plugin-styled-components": "^2.1.1",
     "gatsby-plugin-disqus": "^1.2.6",
     "gatsby-plugin-feed": "^5.9.0",
@@ -26,10 +27,12 @@
     "gatsby-source-filesystem": "^5.9.0",
     "gatsby-transformer-yaml": "^5.9.0",
     "github-slugger": "1.5.0",
+    "path-browserify": "^1.0.1",
     "postcss-import": "^15.1.0",
     "prism-react-renderer": "^2.0.3",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
+    "reading-time": "^1.5.0",
     "styled-components": "^5.3.10",
     "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
